# dspy-rag

./: .gitignore  README.md  dspy_docs_rag.ipynb  dspy_qa_examples.json  dspy_rag_api.py  pyproject.toml
dspy_docs_rag/: cot_rag.json  improved_rag.json
