[tool.poetry]
name = "dspy-rag"
version = "0.1.0"
description = ""
authors = ["juanarancibia <arancibia.juan22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.11.11"
aiosignal = "1.3.2"
alembic = "1.14.0"
annotated-types = "0.7.0"
anyio = "4.7.0"
apscheduler = "3.11.0"
async-timeout = "5.0.1"
asyncer = "0.0.8"
attrs = "24.3.0"
authlib = "1.4.0"
backoff = "2.2.1"
cachetools = "5.5.0"
certifi = "2024.12.14"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
click = "8.1.8"
cloudpickle = "3.1.0"
colorlog = "6.9.0"
cryptography = "42.0.8"
datasets = "3.2.0"
dill = "0.3.8"
diskcache = "5.6.3"
distro = "1.9.0"
dnspython = "2.7.0"
dspy = "2.5.43"
dspy-ai = "2.5.43"
email-validator = "2.2.0"
exceptiongroup = "1.2.2"
fastapi = "0.111.1"
fastapi-cli = "0.0.7"
fastapi-sso = "0.10.0"
filelock = "3.16.1"
frozenlist = "1.5.0"
fsspec = "2024.9.0"
greenlet = "3.1.1"
gunicorn = "22.0.0"
h11 = "0.14.0"
httpcore = "1.0.7"
httptools = "0.6.4"
httpx = "0.27.2"
huggingface-hub = "0.27.0"
idna = "3.10"
importlib-metadata = "8.5.0"
jinja2 = "3.1.5"
jiter = "0.8.2"
joblib = "1.4.2"
json-repair = "0.35.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
litellm = "1.53.7"
magicattr = "0.1.6"
mako = "1.3.8"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
mdurl = "0.1.2"
multidict = "6.1.0"
multiprocess = "0.70.16"
numpy = "2.2.1"
oauthlib = "3.2.2"
openai = "1.58.1"
optuna = "4.1.0"
orjson = "3.10.13"
packaging = "24.2"
pandas = "2.2.3"
propcache = "0.2.1"
pyarrow = "18.1.0"
pycparser = "2.22"
pydantic = "2.10.4"
pydantic-core = "2.27.2"
pygments = "2.18.0"
pyjwt = "2.10.1"
pynacl = "1.5.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pytz = "2024.2"
pyyaml = "6.0.2"
redis = "5.2.1"
referencing = "0.35.1"
regex = "2024.11.6"
requests = "2.32.3"
rich = "13.9.4"
rich-toolkit = "0.12.0"
rpds-py = "0.22.3"
rq = "2.1.0"
shellingham = "1.5.4"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
starlette = "0.37.2"
tenacity = "9.0.0"
tiktoken = "0.8.0"
tokenizers = "0.21.0"
tqdm = "4.67.1"
typer = "0.15.1"
typing-extensions = "4.12.2"
tzdata = "2024.2"
tzlocal = "5.2"
ujson = "5.10.0"
urllib3 = "2.3.0"
uvicorn = "0.22.0"
uvloop = "0.21.0"
validators = "0.34.0"
watchfiles = "1.0.3"
weaviate-client = "3.26.2"
websockets = "14.1"
xxhash = "3.5.0"
yarl = "1.18.3"
zipp = "3.21.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
