[tool.poetry]
name = "dspy-rag"
version = "0.1.0"
description = ""
authors = ["juanarancibia <arancibia.juan22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-community = "^0.3.14"
python-dotenv = "^1.0.1"
openai = "^1.59.3"
tiktoken = "^0.8.0"
langchain-openai = "^0.2.14"
lark = "^1.2.2"
chromadb = "^0.6.1"
unstructured = {extras = ["md"], version = "^0.16.12"}
markdown = "^3.7"
ipykernel = "^6.29.5"
nltk = "^3.9.1"
dspy = "^2.5.43"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
